# api/docs/swagger.yaml
@@ -7574,6 +7574,11 @@ paths:
         name: table_slug
         required: true
         type: string
+      - description: resource_Id
+        in: query
+        name: resource_Id
+        required: true
+        type: string
       - description: GetListObjectRequestBody
         in: body
         name: object
@@ -8429,6 +8434,11 @@ paths:
       - description: resource_id
         in: header
         name: resource_id
+        required: true
+        type: string
+      - description: resource_Id
+        in: query
+        name: resource_Id
         required: true
         type: string
       - in: query
